rev 1.3 fix z-index clear content on scroll

--- a/src/static/css/format.css
+++ b/src/static/css/format.css
@@ -71,6 +71,7 @@ button {
   background-color: #000205;
   height: 21px;
   width: 100%;
+  z-index: 100000000;
 }
 
 header {
